--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "echarts": "^4.8.0",
     "element-ui": "^2.13.2",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "vue": "^2.5.2",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   },
